create documents swagger
